--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "scss": "node-sass --watch scss -o ./public/css"
+    "scss": "node-sass --watch scss -o ./public/css",
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.16.3",
